--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,10 @@
   "id": "super-pilot",
   "name": "Super Pilot",
   "version": "0.1.0",
-  "description": "AI copilot for Super Productivity - adds AI-powered text actions to all input fields",
+  "description": "AI copilot for Super Productivity - adds AI-powered text actions to all input fields and a chat",
   "manifestVersion": 1,
   "minSupVersion": "14.0.0",
+  "icon": "icon.svg",
   "iFrame": true,
   "hooks": []
 }
